Add dynamic portfolio item page with full-bleed images
Introduces portfolio-item.html for dynamic portfolio details, using URL parameters and sessionStorage to hydrate content (title, hero image, long image, live link). Updates main.js to handle data transfer and hydration, main.css for full-bleed long images, and index.html to link portfolio items with relevant data attributes. Improves portfolio image display and enables shareable, dynamic portfolio detail pages.

--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
                         <!-- <i class="bi bi-star-fill"></i> -->
                         <!-- <i class="bi bi-star-fill"></i> -->
                       </div>
-                      <p>"Professional app programmers. We are very satisfied with the work and are happy to recommend them. They delivered perfect work in just a few days under time pressure. We are very grateful."
+                      <p>"Professional app programmers. We are very satisfied with the work and are happy to recommend
+                        them. They delivered perfect work in just a few days under time pressure. We are very grateful."
                       </p>
                       <div class="client-info d-flex align-items-center mt-4">
                         <img src="assets/img/reviews/1-igor-bau.webp" class="client-img" alt="Client" loading="lazy">
@@ -281,7 +282,9 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-half"></i> -->
                       </div>
-                      <p>"5th project with them. Very nice and easy to communicate with person did the job as requested from first time. Beautiful app and easy to use GUI. Takes into consideration all parameters without even me mentioning anything would do all future apps with them"</p>
+                      <p>"5th project with them. Very nice and easy to communicate with person did the job as requested
+                        from first time. Beautiful app and easy to use GUI. Takes into consideration all parameters
+                        without even me mentioning anything would do all future apps with them"</p>
                       <div class="client-info d-flex align-items-center mt-4">
                         <img src="assets/img/reviews/13-waleed-zayed.webp" class="client-img" alt="Client"
                           loading="lazy">
@@ -309,7 +312,9 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-half"></i> -->
                       </div>
-                      <p>"Absolutely fantastic work. They delivered a very nice app with good structured code which was very easy to read. They resolved all the bugs and even accepted my additional requests later on. This is a true machine :-) Definitely my man from on again!"</p>
+                      <p>"Absolutely fantastic work. They delivered a very nice app with good structured code which was
+                        very easy to read. They resolved all the bugs and even accepted my additional requests later on.
+                        This is a true machine :-) Definitely my man from on again!"</p>
                       <div class="client-info d-flex align-items-center mt-4">
                         <img src="assets/img/reviews/2-daniel-yakun.webp" class="client-img" alt="Client"
                           loading="lazy">
@@ -337,7 +342,9 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-fill"></i> -->
                       </div>
-                      <p>"They were very good to work with. He satisfied all the task requirements, and was able to delivery it ahead of schedule, defently exceeded expectations and look forward in working in other projects. He is very talented at what he does, and his communication is perfect"</p>
+                      <p>"They were very good to work with. He satisfied all the task requirements, and was able to
+                        delivery it ahead of schedule, defently exceeded expectations and look forward in working in
+                        other projects. He is very talented at what he does, and his communication is perfect"</p>
                       <div class="client-info d-flex align-items-center mt-4">
                         <img src="assets/img/reviews/3-freddie-botha.webp" class="client-img" alt="Client"
                           loading="lazy">
@@ -365,7 +372,9 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-half"></i> -->
                       </div>
-                      <p>"They are excellent at their work. Their communication is extremely professional and they have a good human relationship. They always delivers beyond expectations. I have never regretted working with them. I have many projects which they'll do for me because they deserve it"</p>
+                      <p>"They are excellent at their work. Their communication is extremely professional and they have
+                        a good human relationship. They always delivers beyond expectations. I have never regretted
+                        working with them. I have many projects which they'll do for me because they deserve it"</p>
                       <div class="client-info d-flex align-items-center mt-4">
                         <img src="assets/img/reviews/4-eugene.webp" class="client-img" alt="Client" loading="lazy">
                         <div>
@@ -392,7 +401,9 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-half"></i> -->
                       </div>
-                      <p>"Quick delivery and turnaround time that was extremely helpful with a last-minute project that needed profound expertise to master. He came through with flying colors and helped our team over the finish line. Thanks so much!! We really appreciate it."</p>
+                      <p>"Quick delivery and turnaround time that was extremely helpful with a last-minute project that
+                        needed profound expertise to master. He came through with flying colors and helped our team over
+                        the finish line. Thanks so much!! We really appreciate it."</p>
                       <div class="client-info d-flex align-items-center mt-4">
                         <img src="assets/img/reviews/5-holli-dov.webp" class="client-img" alt="Client" loading="lazy">
                         <div>
@@ -419,7 +430,8 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-half"></i> -->
                       </div>
-                      <p>"Very good. Delivered the project on time, and were very polite and helped every time I had a question. Would def recommend them."</p>
+                      <p>"Very good. Delivered the project on time, and were very polite and helped every time I had a
+                        question. Would def recommend them."</p>
                       <div class="client-info d-flex align-items-center mt-4">
                         <img src="assets/img/reviews/6-pushpa-rohini.webp" class="client-img" alt="Client"
                           loading="lazy">
@@ -447,7 +459,9 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-half"></i> -->
                       </div>
-                      <p>"I'm very happy with the final code. They have very talented developers with good communication and fast delivery. The app is exactly how i want it to look like. I recommend these developers for anyone who wants a good service. Thank you!!"</p>
+                      <p>"I'm very happy with the final code. They have very talented developers with good communication
+                        and fast delivery. The app is exactly how i want it to look like. I recommend these developers
+                        for anyone who wants a good service. Thank you!!"</p>
                       <div class="client-info d-flex align-items-center mt-4">
                         <img src="assets/img/reviews/7-eymane-sabri.webp" class="client-img" alt="Client"
                           loading="lazy">
@@ -475,7 +489,9 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-half"></i> -->
                       </div>
-                      <p>"They recently helped me with an app and I was happy with the work. They completed this app for me quickly and exactly as I described. The source code is clean and easy to read. Fantastic people to work with and great communication."</p>
+                      <p>"They recently helped me with an app and I was happy with the work. They completed this app for
+                        me quickly and exactly as I described. The source code is clean and easy to read. Fantastic
+                        people to work with and great communication."</p>
                       <div class="client-info d-flex align-items-center mt-4">
                         <img src="assets/img/reviews/8-cleisonps.webp" class="client-img" alt="Client" loading="lazy">
                         <div>
@@ -502,7 +518,9 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-half"></i> -->
                       </div>
-                      <p>"Really great experience. Very communicative throughout the project, letting me know what they've done so we don't get sidetracked. Patient, knowledgable and very helpful. We are in discussion for the next project. Highly recommend!"
+                      <p>"Really great experience. Very communicative throughout the project, letting me know what
+                        they've done so we don't get sidetracked. Patient, knowledgable and very helpful. We are in
+                        discussion for the next project. Highly recommend!"
                       </p>
                       <div class="client-info d-flex align-items-center mt-4">
                         <img src="assets/img/reviews/9-nawaz-khosa.webp" class="client-img" alt="Client" loading="lazy">
@@ -530,7 +548,10 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-half"></i> -->
                       </div>
-                      <p>"I recently had the pleasure of working with them, they developed an application for me, and I am highly impressed with their work! From start to finish, incredibly professional, responsive, and easy to work with. One of the things I appreciated most about him was his attention to detail. He took the time to understand my needs and goals for the application."
+                      <p>"I recently had the pleasure of working with them, they developed an application for me, and I
+                        am highly impressed with their work! From start to finish, incredibly professional, responsive,
+                        and easy to work with. One of the things I appreciated most about him was his attention to
+                        detail. He took the time to understand my needs and goals for the application."
                       </p>
                       <div class="client-info d-flex align-items-center mt-4">
                         <img src="assets/img/reviews/10-armstrong.webp" class="client-img" alt="Client" loading="lazy">
@@ -558,7 +579,9 @@
                         <i class="bi bi-star-fill"></i>
                         <i class="bi bi-star-half"></i> -->
                       </div>
-                      <p>"Once again! I'm very happy to have the amendments in my app from them. They listened to all my queries and responded. They made me able to have my business going smoothly. Totally recommended! "
+                      <p>"Once again! I'm very happy to have the amendments in my app from them. They listened to all my
+                        queries and responded. They made me able to have my business going smoothly. Totally
+                        recommended! "
                       </p>
                       <div class="client-info d-flex align-items-center mt-4">
                         <img src="assets/img/reviews/11-beast-workers.webp" class="client-img" alt="Client"
@@ -1133,7 +1156,13 @@
                           data-glightbox="title: Mobile Banking App; description: Praesent commodo cursus magna, vel scelerisque nisl consectetur.">
                           <i class="bi bi-arrows-angle-expand"></i>
                         </a> -->
-                        <a href="portfolio-details.html">
+                        <!-- <a href="portfolio-item.html"> -->
+                        <!-- <i class="bi bi-arrow-right"></i> -->
+                        <!-- </a> -->
+                        <a href="portfolio-item.html" data-title="Chama"
+                          data-hero="assets/img/portfolio/portfolio-detail-screen-placeholder.png"
+                          data-long="https://firebasestorage.googleapis.com/v0/b/foolee-inc.appspot.com/o/chama.svg?alt=media&token=138ed697-51be-420e-b76a-fd4b380b9343"
+                          data-live="https://google.com">
                           <i class="bi bi-arrow-right"></i>
                         </a>
                       </div>
@@ -1157,7 +1186,10 @@
                           data-glightbox="title: E-Learning Platform; description: Nulla vitae elit libero, a pharetra augue mollis interdum.">
                           <i class="bi bi-arrows-angle-expand"></i>
                         </a> -->
-                        <a href="portfolio-details.html">
+                        <a href="portfolio-item.html" data-title="Long Status Pro"
+                          data-hero="assets/img/portfolio/portfolio-detail-screen-placeholder.png"
+                          data-long="https://firebasestorage.googleapis.com/v0/b/foolee-inc.appspot.com/o/long-status-pro.svg?alt=media&token=d544d458-41a8-47b4-96dc-9cf467a5a88b"
+                          data-live="https://example.com">
                           <i class="bi bi-arrow-right"></i>
                         </a>
                       </div>
@@ -1181,7 +1213,9 @@
                           data-glightbox="title: Urban Architecture; description: Sed ut perspiciatis unde omnis iste natus error sit voluptatem.">
                           <i class="bi bi-arrows-angle-expand"></i>
                         </a> -->
-                        <a href="portfolio-details.html">
+                        <a href="portfolio-item.html" data-title="Torah Share2"
+                          data-hero="assets/img/portfolio/portfolio-detail-screen-placeholder.png"
+                          data-long="assets/img/portfolio/torah-share.svg" data-live="https://example.com">
                           <i class="bi bi-arrow-right"></i>
                         </a>
                       </div>
@@ -1205,7 +1239,9 @@
                           data-glightbox="title: Social Media Campaign; description: Quis autem vel eum iure reprehenderit qui in ea voluptate.">
                           <i class="bi bi-arrows-angle-expand"></i>
                         </a> -->
-                        <a href="portfolio-details.html">
+                        <a href="portfolio-item.html" data-title="Torah Share2"
+                          data-hero="assets/img/portfolio/portfolio-detail-screen-placeholder.png"
+                          data-long="assets/img/portfolio/torah-share.svg" data-live="https://example.com">
                           <i class="bi bi-arrow-right"></i>
                         </a>
                       </div>
@@ -1229,7 +1265,9 @@
                           data-glightbox="title: Smart Home Interface; description: At vero eos et accusamus et iusto odio dignissimos ducimus.">
                           <i class="bi bi-arrows-angle-expand"></i>
                         </a> -->
-                        <a href="portfolio-details.html">
+                        <a href="portfolio-item.html" data-title="Torah Share2"
+                          data-hero="assets/img/portfolio/portfolio-detail-screen-placeholder.png"
+                          data-long="assets/img/portfolio/torah-share.svg" data-live="https://example.com">
                           <i class="bi bi-arrow-right"></i>
                         </a>
                       </div>
@@ -1253,7 +1291,9 @@
                           data-glightbox="title: Cloud Management System; description: Temporibus autem quibusdam et aut officiis debitis.">
                           <i class="bi bi-arrows-angle-expand"></i>
                         </a> -->
-                        <a href="portfolio-details.html">
+                        <a href="portfolio-item.html" data-title="Torah Share2"
+                          data-hero="assets/img/portfolio/portfolio-detail-screen-placeholder.png"
+                          data-long="assets/img/portfolio/torah-share.svg" data-live="https://example.com">
                           <i class="bi bi-arrow-right"></i>
                         </a>
                       </div>
@@ -1277,7 +1317,9 @@
                           data-glightbox="title: Nature Collection; description: Integer posuere erat a ante venenatis dapibus posuere velit aliquet.">
                           <i class="bi bi-arrows-angle-expand"></i>
                         </a> -->
-                        <a href="portfolio-details.html">
+                        <a href="portfolio-item.html" data-title="Torah Share2"
+                          data-hero="assets/img/portfolio/portfolio-detail-screen-placeholder.png"
+                          data-long="assets/img/portfolio/torah-share.svg" data-live="https://example.com">
                           <i class="bi bi-arrow-right"></i>
                         </a>
                       </div>
@@ -1301,7 +1343,9 @@
                           data-glightbox="title: Brand Strategy; description: Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.">
                           <i class="bi bi-arrows-angle-expand"></i>
                         </a> -->
-                        <a href="portfolio-details.html">
+                        <a href="portfolio-item.html" data-title="Torah Share2"
+                          data-hero="assets/img/portfolio/portfolio-detail-screen-placeholder.png"
+                          data-long="assets/img/portfolio/torah-share.svg" data-live="https://example.com">
                           <i class="bi bi-arrow-right"></i>
                         </a>
                       </div>
@@ -1329,7 +1373,9 @@
                           data-glightbox="title: Brand Strategy; description: Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.">
                           <i class="bi bi-arrows-angle-expand"></i>
                         </a> -->
-                        <a href="portfolio-details.html">
+                        <a href="portfolio-item.html" data-title="Torah Share2"
+                          data-hero="assets/img/portfolio/portfolio-detail-screen-placeholder.png"
+                          data-long="assets/img/portfolio/torah-share.svg" data-live="https://example.com">
                           <i class="bi bi-arrow-right"></i>
                         </a>
                       </div>
@@ -1354,7 +1400,9 @@
                           data-glightbox="title: Cloud Management System; description: Temporibus autem quibusdam et aut officiis debitis.">
                           <i class="bi bi-arrows-angle-expand"></i>
                         </a> -->
-                        <a href="portfolio-details.html">
+                        <a href="portfolio-item.html" data-title="Torah Share2"
+                          data-hero="assets/img/portfolio/portfolio-detail-screen-placeholder.png"
+                          data-long="assets/img/portfolio/torah-share.svg" data-live="https://example.com">
                           <i class="bi bi-arrow-right"></i>
                         </a>
                       </div>
