Replace .webp review images with .png in index.html
Swapped .webp images for .png versions for Armstrong, Waleed Zayed, and Pushpa Rohini in the reviews section. Updated index.html to reference the new .png files and removed the corresponding .webp files.

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         from first time. Beautiful app and easy to use GUI. Takes into consideration all parameters
                         without even me mentioning anything would do all future apps with them"</p>
                       <div class="client-info d-flex align-items-center mt-4">
-                        <img src="assets/img/reviews/13-waleed-zayed.webp" class="client-img" alt="Client"
+                        <img src="assets/img/reviews/13-waleed-zayed.png" class="client-img" alt="Client"
                           loading="lazy">
                         <div>
                           <h6 class="mb-0">Waleed Zayed <img
@@ -433,7 +433,7 @@
                       <p>"Very good. Delivered the project on time, and were very polite and helped every time I had a
                         question. Would def recommend them."</p>
                       <div class="client-info d-flex align-items-center mt-4">
-                        <img src="assets/img/reviews/6-pushpa-rohini.webp" class="client-img" alt="Client"
+                        <img src="assets/img/reviews/6-pushpa-rohini.png" class="client-img" alt="Client"
                           loading="lazy">
                         <div>
                           <h6 class="mb-0">Pushpa Rohini <img
@@ -554,7 +554,7 @@
                         detail. He took the time to understand my needs and goals for the application."
                       </p>
                       <div class="client-info d-flex align-items-center mt-4">
-                        <img src="assets/img/reviews/10-armstrong.webp" class="client-img" alt="Client" loading="lazy">
+                        <img src="assets/img/reviews/10-armstrong.png" class="client-img" alt="Client" loading="lazy">
                         <div>
                           <h6 class="mb-0">Armstrong <img
                               src="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/svg/1f1fa-1f1f8.svg" width="24"
