--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                       <div class="client-info d-flex align-items-center mt-4">
                         <img src="assets/img/reviews/8-cleisonps.webp" class="client-img" alt="Client" loading="lazy">
                         <div>
-                          <h6 class="mb-0">Clei sonps <img
+                          <h6 class="mb-0">Clei Sonps <img
                               src="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/svg/1f1e7-1f1f7.svg" width="24"
                               style="vertical-align: middle;"></h6>
                           <span>Operations Manager</span>
@@ -675,7 +675,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <img src="assets/img/abstract/mobile-development.png" alt="Mobile Apps Icon" class="service-icon-img">
+                <img src="assets/img/services/mobile.gif" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
               <div class="content-area">
                 <h3>
@@ -693,7 +693,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <img src="assets/img/abstract/mobile-development.png" alt="Mobile Apps Icon" class="service-icon-img">
+                <img src="assets/img/services/website.gif" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
               <div class="content-area">
                 <h3>
@@ -711,7 +711,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <img src="assets/img/abstract/mobile-development.png" alt="Mobile Apps Icon" class="service-icon-img">
+                <img src="assets/img/services/branding.gif" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
               <div class="content-area">
                 <h3>
@@ -729,7 +729,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <img src="assets/img/abstract/mobile-development.png" alt="Mobile Apps Icon" class="service-icon-img">
+                <img src="assets/img/services/content-strategy.gif" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
               <div class="content-area">
                 <h3>
@@ -747,7 +747,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <img src="assets/img/abstract/mobile-development.png" alt="Mobile Apps Icon" class="service-icon-img">
+                <img src="assets/img/services/branding.gif" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
               <div class="content-area">
                 <h3>
@@ -765,7 +765,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <img src="assets/img/abstract/mobile-development.png" alt="Mobile Apps Icon" class="service-icon-img">
+                <img src="assets/img/services/content-strategy.gif" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
               <div class="content-area">
                 <h3>
