Update portfolio marketing items and live link logic
Added new marketing portfolio images and thumbnails for 'Fuse' and 'Doad'. Updated index.html to display these items with correct titles and images, and removed unused hidden portfolio entries. Improved live link button logic in main.js to show or hide the button based on the presence of a valid link. Added CSS for hidden portfolio button state. Minor updates to portfolio-item.html for title and preloader styling.

--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio Item - Strategy Bootstrap Template</title>
+  <title>Portfolio Item</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -123,12 +123,12 @@
     </section>
     <!-- /Portfolio Details Section -->
 
-    <section id="portfolio-actions" class="portfolio-details section">
+    <!-- <section id="portfolio-actions" class="portfolio-details section">
       <div class="col-12 text-center">
         <a id="portfolio-live-link" href="https://www.google.com" class="show-more-button" target="_blank"
           rel="noopener">view live</a>
       </div>
-    </section>
+    </section> -->
 
   </main>
 
@@ -200,7 +200,7 @@
 
   <!-- Preloader -->
   <div id="preloader">
-    <lottie-player src="assets/img/misc/loader-eyes.json" background="transparent" speed="1"
+    <lottie-player class="preloader-laptop" src="assets/img/misc/loader-eyes.json" background="transparent" speed="1"
       style="width: 100vw; height: 100vh;" loop autoplay>
     </lottie-player>
   </div>
