Add budget range slider and update preloader logic
Introduces a budget range slider to the contact form with supporting styles and JavaScript functionality. Refines preloader logic to show only if an hour has passed since last display, and updates preloader classes and styles for home and portfolio pages. Also updates service icons, plan names, and team member descriptions for clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <img src="assets/img/services/content-strategy.gif" alt="Mobile Apps Icon" class="service-icon-img">
+                <img src="assets/img/services/marketing.gif" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
               <div class="content-area">
                 <h3>
@@ -747,7 +747,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
-                <img src="assets/img/services/branding.gif" alt="Mobile Apps Icon" class="service-icon-img">
+                <img src="assets/img/services/ui-ux.gif" alt="Mobile Apps Icon" class="service-icon-img">
               </div>
               <div class="content-area">
                 <h3>
@@ -1877,8 +1877,7 @@
               <div class="member-info flex-grow-1">
                 <h4>Faizan Baber</h4>
                 <span>Operational Manager</span>
-                <p>Labore ipsam sit consequatur exercitationem rerum laboriosam laudantium aut quod dolores
-                  exercitationem ut</p>
+                <p>I manage our daily operations, ensuring all company processes runs smoothly.</p>
                 <div class="social">
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -1897,7 +1896,7 @@
               <div class="member-info flex-grow-1">
                 <h4>Moutamid Monim</h4>
                 <span>Tech Lead <span class="founder-text">(Founder)</span></span>
-                <p>Aliquam iure quaerat voluptatem praesentium possimus unde laudantium vel dolorum distinctio dire flow
+                <p>I provide the core vision while guiding our tech team.
                 </p>
                 <div class="social">
                   <a href=""><i class="bi bi-facebook"></i></a>
@@ -1917,8 +1916,8 @@
               <div class="member-info flex-grow-1">
                 <h4>Mhnooor Taariq</h4>
                 <span>Creative Director</span>
-                <p>Illum minima ea autem doloremque ipsum quidem quas aspernatur modi ut praesentium vel tque sed
-                  facilis at qui</p>
+                <p>I'm a passionate visual designer and creative thinker, powered by caffeine.</p>
+                <!-- <p>I'm a passionate visual designer and creative thinker (with a little caffeine powering it all)</p> -->
                 <div class="social">
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -1937,8 +1936,7 @@
               <div class="member-info flex-grow-1">
                 <h4>Muzna Farid</h4>
                 <span>Associate Designer</span>
-                <p>Magni voluptatem accusamus assumenda cum nisi aut qui dolorem voluptate sed et veniam quasi quam
-                  consectetur</p>
+                <p>I transform abstract concepts into compelling visual designs.</p>
                 <div class="social">
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -2039,7 +2037,7 @@
                 </ul>
               </div>
               <div class="plan-cta-consultancy">
-                <a href="#contact" class="btn-plan" data-plan="Consultancy">Choose Plan</a>
+                <a href="#contact" class="btn-plan" data-plan="Discovery Call">Choose Plan</a>
               </div>
             </div>
           </div><!-- End Basic Plan -->
@@ -2076,7 +2074,7 @@
                 </ul>
               </div>
               <div class="plan-cta-onetime">
-                <a href="#contact" class="btn-plan" data-plan="One-time Project">Choose Plan</a>
+                <a href="#contact" class="btn-plan" data-plan="Creator's Club">Choose Plan</a>
               </div>
             </div>
           </div><!-- End Professional Plan -->
@@ -2113,7 +2111,7 @@
                 </ul>
               </div>
               <div class="plan-cta-subscription">
-                <a href="#contact" class="btn-plan" data-plan="Subscription">Choose Plan</a>
+                <a href="#contact" class="btn-plan" data-plan="The Build">Choose Plan</a>
               </div>
             </div>
           </div><!-- End Enterprise Plan -->
@@ -2130,7 +2128,7 @@
         <div class="row">
 
           <div class="col-lg-5" data-aos="fade-up">
-            <h2 class="faq-title">Got questions? We’ve got answers</h2>
+            <h2 class="faq-title">Got questions? We've got answers</h2>
             <p class="faq-description">We appreciate clarity. If you don't find your question here, feel free to ask
               (we're here to help)</p>
             <div class="faq-arrow">
@@ -2290,7 +2288,7 @@
                       <div class="input-with-icon">
                         <i class="bi bi-person"></i>
                         <!-- <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img"> -->
-                        <input type="text" class="form-control" name="name" placeholder="First Name" required="">
+                        <input type="text" class="form-control" name="name" placeholder="Name" required="">
                       </div>
                     </div>
                   </div>
@@ -2310,11 +2308,30 @@
                         <i class="bi bi-list-ul"></i>
                         <select class="form-control" name="subject" id="plan-selector" required="">
                           <option value="" disabled selected>Select a Plan</option>
-                          <option value="Consultancy">Consultancy</option>
-                          <option value="One-time Project">One-time Project</option>
-                          <option value="Subscription">Subscription</option>
+                          <option value="Discovery Call">Discovery Call</option>
+                          <option value="Creator's Club">Creator's Club</option>
+                          <option value="The Build">The Build</option>
                         </select>
                       </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <label class="budget-label">Budget Range</label>
+                      <div class="budget-slider-container">
+                        <div class="budget-range-wrapper">
+                          <input type="range" id="budget-min" class="budget-range budget-range-min" min="5" max="100" value="5" step="1">
+                          <input type="range" id="budget-max" class="budget-range budget-range-max" min="5" max="100" value="50" step="1">
+                          <div class="slider-track"></div>
+                          <div class="slider-range"></div>
+                        </div>
+                        <div class="budget-values">
+                          <span class="budget-min-value">$5K</span>
+                          <span class="budget-max-value">$50K</span>
+                        </div>
+                      </div>
+                      <input type="hidden" name="budget_range" id="budget-range-input" value="5000-50000">
                     </div>
                   </div>
 
@@ -2322,7 +2339,7 @@
                     <div class="form-group">
                       <div class="input-with-icon">
                         <i class="bi bi-chat-dots message-icon"></i>
-                        <textarea class="form-control" name="message" placeholder="Write Message..."
+                        <textarea class="form-control" name="message" placeholder="Tell us about your project briefly..."
                           style="height: 180px" required=""></textarea>
                       </div>
                     </div>
@@ -2425,7 +2442,7 @@
 
   <!-- Preloader -->
   <div id="preloader">
-    <lottie-player class="preloader-laptop" src="assets/img/misc/intro-illustration.json" background="transparent" speed="1"
+    <lottie-player class="preloader-home" src="assets/img/misc/intro-illustration.json" background="transparent" speed="1"
       style="width: 100vw; height: 100vh;" loop autoplay>
     </lottie-player>
   </div>
