--- a/portfolio-item.html
+++ b/portfolio-item.html
@@ -200,8 +200,8 @@
 
   <!-- Preloader -->
   <div id="preloader">
-    <lottie-player class="preloader-laptop" src="assets/img/misc/loader-eyes.json" background="transparent" speed="1"
-      style="width: 100vw; height: 100vh;" loop autoplay>
+    <lottie-player class="preloader-portfolio" src="assets/img/misc/loader-eyes.json" background="transparent" speed="1"
+      loop autoplay>
     </lottie-player>
   </div>
 
