--- a/index.html
+++ b/index.html
@@ -151,6 +151,76 @@
       </div>
     </section><!-- /Hero Section -->
 
+    <!-- Brands Section -->
+    <section id="brands" class="brands section">
+      <div class="container" data-aos="fade-up">
+        
+        <!-- Section Title -->
+        <div class="section-title text-center mb-5">
+          <h2>Brands</h2>
+          <div><span>Trusted by </span> <span class="description-title">Industry Leaders</span></div>
+        </div><!-- End Section Title -->
+
+        <!-- Brands Carousel -->
+        <div class="brands-carousel-container">
+          <div class="brands-track">
+            <!-- First set of brands -->
+            <div class="brand-item">
+              <img src="assets/img/abstract/fooliz-logo.png" alt="Brand 1" class="brand-logo">
+            </div>
+            <div class="brand-item">
+              <img src="assets/img/abstract/fooliz-logo.png" alt="Brand 2" class="brand-logo">
+            </div>
+            <div class="brand-item">
+              <img src="assets/img/abstract/fooliz-logo.png" alt="Brand 3" class="brand-logo">
+            </div>
+            <div class="brand-item">
+              <img src="assets/img/abstract/fooliz-logo.png" alt="Brand 4" class="brand-logo">
+            </div>
+            <div class="brand-item">
+              <img src="assets/img/abstract/fooliz-logo.png" alt="Brand 5" class="brand-logo">
+            </div>
+            <div class="brand-item">
+              <img src="assets/img/abstract/fooliz-logo.png" alt="Brand 6" class="brand-logo">
+            </div>
+            <div class="brand-item">
+              <img src="assets/img/abstract/fooliz-logo.png" alt="Brand 7" class="brand-logo">
+            </div>
+            <div class="brand-item">
+              <img src="assets/img/abstract/fooliz-logo.png" alt="Brand 8" class="brand-logo">
+            </div>
+            
+            <!-- Duplicate set for seamless infinite scroll -->
+            <div class="brand-item">
+              <img src="assets/img/abstract/fooliz-logo.png" alt="Brand 1" class="brand-logo">
+            </div>
+            <div class="brand-item">
+              <img src="assets/img/abstract/fooliz-logo.png" alt="Brand 2" class="brand-logo">
+            </div>
+            <div class="brand-item">
+              <img src="assets/img/abstract/fooliz-logo.png" alt="Brand 3" class="brand-logo">
+            </div>
+            <div class="brand-item">
+              <img src="assets/img/abstract/fooliz-logo.png" alt="Brand 4" class="brand-logo">
+            </div>
+            <div class="brand-item">
+              <img src="assets/img/abstract/fooliz-logo.png" alt="Brand 5" class="brand-logo">
+            </div>
+            <div class="brand-item">
+              <img src="assets/img/abstract/fooliz-logo.png" alt="Brand 6" class="brand-logo">
+            </div>
+            <div class="brand-item">
+              <img src="assets/img/abstract/fooliz-logo.png" alt="Brand 7" class="brand-logo">
+            </div>
+            <div class="brand-item">
+              <img src="assets/img/abstract/fooliz-logo.png" alt="Brand 8" class="brand-logo">
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- /Brands Section -->
+
     <!-- Services Section -->
     <section id="services" class="services section">
 
