--- a/index.html
+++ b/index.html
@@ -221,6 +221,67 @@
       </div>
     </section><!-- /Brands Section -->
 
+    <!-- Mobile Mockup Section -->
+    <section id="mobile-mockup" class="mobile-mockup section">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-6 col-md-8">
+            <div class="mobile-mockup-container" data-aos="zoom-in">
+              <div class="mobile-frame">
+                <div class="mobile-screen">
+                  <div class="screenshots-container">
+                    <div class="screenshot active">
+                      <img src="assets/img/mockup/screen-1.jpg" alt="App Screenshot 1">
+                    </div>
+                    <div class="screenshot">
+                      <img src="assets/img/mockup/screen-2.jpg" alt="App Screenshot 2">
+                    </div>
+                    <div class="screenshot">
+                      <img src="assets/img/mockup/screen-3.jpg" alt="App Screenshot 3">
+                    </div>
+                    <div class="screenshot">
+                      <img src="assets/img/mockup/screen-4.jpg" alt="App Screenshot 4">
+                    </div>
+                    <div class="screenshot">
+                      <img src="assets/img/mockup/screen-5.jpg" alt="App Screenshot 5">
+                    </div>
+                     <div class="screenshot">
+                      <img src="assets/img/mockup/screen-2.jpg" alt="App Screenshot 2">
+                    </div>
+                    <div class="screenshot">
+                      <img src="assets/img/mockup/screen-3.jpg" alt="App Screenshot 3">
+                    </div>
+                    <div class="screenshot">
+                      <img src="assets/img/mockup/screen-4.jpg" alt="App Screenshot 4">
+                    </div>
+                    <div class="screenshot">
+                      <img src="assets/img/mockup/screen-5.jpg" alt="App Screenshot 5">
+                    </div>
+                     <div class="screenshot">
+                      <img src="assets/img/mockup/screen-2.jpg" alt="App Screenshot 2">
+                    </div>
+                    <div class="screenshot">
+                      <img src="assets/img/mockup/screen-3.jpg" alt="App Screenshot 3">
+                    </div>
+                    <div class="screenshot">
+                      <img src="assets/img/mockup/screen-4.jpg" alt="App Screenshot 4">
+                    </div>
+                    <div class="screenshot">
+                      <img src="assets/img/mockup/screen-5.jpg" alt="App Screenshot 5">
+                    </div>
+                  </div>
+                </div>
+                
+                <!-- Mobile Frame Elements -->
+                <div class="mobile-notch"></div>
+                <div class="mobile-home-indicator"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section><!-- /Mobile Mockup Section -->
+
     <!-- Services Section -->
     <section id="services" class="services section">
 
@@ -2157,7 +2218,7 @@
 
     </section><!-- /Steps Section -->
 
-    <!-- Call To Action Section -->
+    <!-- Call To Action Section
     <section id="call-to-action" class="call-to-action section">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -2171,56 +2232,31 @@
 
             <div class="features d-flex flex-wrap gap-3 mb-4">
               <div class="feature-item">
-                <!-- <i class="bi bi-check-circle-fill"></i> -->
                 <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
                 <span>Subscription based</span>
               </div>
               <div class="feature-item">
-                <!-- <i class="bi bi-check-circle-fill"></i> -->
                 <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
                 <span>Cancel anytime</span>
               </div>
               <div class="feature-item">
-                <!-- <i class="bi bi-check-circle-fill"></i> -->
                 <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
                 <span>Design-led</span>
               </div>
             </div>
 
-            <!-- <div class="cta-buttons d-flex flex-wrap gap-3"> -->
-            <!-- <a href="#contact" class="btn btn-primary">Contact Now</a> -->
-            <!-- <a href="#services" class="btn btn-outline">Learn More</a> -->
-            <!-- </div> -->
-
-            <!-- <div class="cta-buttons d-flex flex-wrap gap-3"> -->
-            <!-- <a href="#contact" class="btn btn-primary">Contact Now</a> -->
-            <!-- <a href="#services" class="btn btn-outline">Learn More</a> -->
-            <!-- </div> -->
           </div>
 
           <div class="content-right position-relative" data-aos="fade-left" data-aos-delay="300">
             <img src="assets/img/misc/misc-1.webp" class="img-fluid rounded-4">
-            <!-- <div class="floating-card">
-              <div class="card-icon">
-                <i class="bi bi-graph-up-arrow"></i>
-              </div>
-              <div class="card-content">
-                <span class="stats-number">245%</span>
-                <span class="stats-text">Growth Rate</span>
-              </div>
-            </div> -->
+            
           </div>
-
-          <!-- <div class="decoration">
-            <div class="circle-1"></div>
-            <div class="circle-2"></div>
-          </div> -->
 
         </div>
 
       </div>
 
-    </section><!-- /Call To Action Section -->
+    </section> Call To Action Section -->
 
     <!-- Faq Section -->
     <section class="faq-9 faq section" id="faq">
@@ -2565,6 +2601,9 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+  
+  <!-- Mobile Mockup JS -->
+  <script src="assets/js/mobile-mockup.js"></script>
 
 </body>
 
