Enhance mobile mockup scroll lock and UI feedback
Improves the mobile mockup section by implementing robust scroll lock logic, progress indicator UI, and keyboard/touch navigation. Updates CSS for full viewport layout and progress bar, refactors JS for better scroll detection and user experience, and cleans up duplicate screenshots in HTML.

--- a/index.html
+++ b/index.html
@@ -223,9 +223,9 @@
 
     <!-- Mobile Mockup Section -->
     <section id="mobile-mockup" class="mobile-mockup section">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-6 col-md-8">
+      <div class="container-fluid h-100">
+        <div class="row justify-content-center h-100">
+          <div class="col-lg-6 col-md-8 d-flex align-items-center justify-content-center">
             <div class="mobile-mockup-container" data-aos="zoom-in">
               <div class="mobile-frame">
                 <div class="mobile-screen">
@@ -234,30 +234,6 @@
                       <img src="assets/img/mockup/screen-1.jpg" alt="App Screenshot 1">
                     </div>
                     <div class="screenshot">
-                      <img src="assets/img/mockup/screen-2.jpg" alt="App Screenshot 2">
-                    </div>
-                    <div class="screenshot">
-                      <img src="assets/img/mockup/screen-3.jpg" alt="App Screenshot 3">
-                    </div>
-                    <div class="screenshot">
-                      <img src="assets/img/mockup/screen-4.jpg" alt="App Screenshot 4">
-                    </div>
-                    <div class="screenshot">
-                      <img src="assets/img/mockup/screen-5.jpg" alt="App Screenshot 5">
-                    </div>
-                     <div class="screenshot">
-                      <img src="assets/img/mockup/screen-2.jpg" alt="App Screenshot 2">
-                    </div>
-                    <div class="screenshot">
-                      <img src="assets/img/mockup/screen-3.jpg" alt="App Screenshot 3">
-                    </div>
-                    <div class="screenshot">
-                      <img src="assets/img/mockup/screen-4.jpg" alt="App Screenshot 4">
-                    </div>
-                    <div class="screenshot">
-                      <img src="assets/img/mockup/screen-5.jpg" alt="App Screenshot 5">
-                    </div>
-                     <div class="screenshot">
                       <img src="assets/img/mockup/screen-2.jpg" alt="App Screenshot 2">
                     </div>
                     <div class="screenshot">
@@ -280,6 +256,9 @@
           </div>
         </div>
       </div>
+      
+      <!-- Progress Indicator -->
+      <div class="progress-hint">Scroll to explore the app</div>
     </section><!-- /Mobile Mockup Section -->
 
     <!-- Services Section -->
